--- a/SMapp/templates/login.html
+++ b/SMapp/templates/login.html
@@ -52,9 +52,7 @@
       
                         <div class="pt-1 mb-4">
                           <input class="btn btn-dark btn-lg btn-block" type="submit" value="Login"></input>
-                        </div>
-                        <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="StudentRegistration" style="color: #393f81;">Register here</a></p>
-                        <a href="#" class="small text-muted">Terms of use.</a>
+                        </div>                        <a href="#" class="small text-muted">Terms of use.</a>
                         <a href="#" class="small text-muted">Privacy policy</a>
                       </form>
       
